# SGC

./: .travis.yml
ci/: script.sh
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/chain-extension/src/: lib.rs
pallets/erc1155/src/: lib.rs
pallets/erc20/: Cargo.toml
pallets/erc20/erc20-extersion/: Cargo.toml
pallets/erc20/erc20-extersion/src/: lib.rs
pallets/erc20/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
