[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.9.0", features = ["wasmtime"] , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-executor = { version = "0.9.0", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
sc-service = { version = "0.9.0",  features = ["wasmtime"] , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-telemetry = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
sp-inherents = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-transaction-pool = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-consensus-aura = { version = "0.9.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-consensus-aura = { version = "0.9.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-consensus = { version = "0.9.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-consensus = { version = "0.9.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-finality-grandpa = { version = "0.9.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-finality-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-client-api = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-runtime = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-api = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-rpc-api = { version = "0.9.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-block-builder = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
substrate-frame-rpc-system = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-contracts = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-contracts-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}

# These dependencies are used for runtime benchmarking
# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
frame-benchmarking-cli = { version = "3.0.0" , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}

node-template-runtime = { version = "2.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
