[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

pallet-aura = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
pallet-grandpa = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-sudo = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
frame-executive = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-block-builder = {  default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-consensus-aura = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-inherents = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-offchain = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-runtime = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-session = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-std = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-transaction-pool = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}

# Used for runtime benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
frame-system-benchmarking = { version = "3.0.0", default-features = false,  optional = true , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
hex-literal = { version = "0.3.1", optional = true }

# contact
pallet-contracts = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-contracts-primitives = { version = "3.0.0", default-features = false , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}

template = { version = "2.0.0", default-features = false, path = "../pallets/template", package = "pallet-template" }
erc20 = { version = "2.0.0", default-features = false, path = "../pallets/erc20", package = "pallet-erc20" }
erc20-extersion = { version = "2.0.0", default-features = false, path = "../pallets/erc20/erc20-extersion", package = "pallet-erc20-extersion" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"template/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"erc20/std",
	"erc20-extersion/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
