[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-erc20-extersion'
version = "2.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
frame-system = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
frame-benchmarking = {default-features = false, version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-std = {default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
sp-runtime = {default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
pallet-contracts = {default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }
pallet-randomness-collective-flip = {default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "ec498bb" }

funty = { version = "=1.1.0", default-features = false } 
[dev-dependencies]
serde = { version = "1.0.101" }

sp-core = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-io = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}
sp-runtime = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", rev = "ec498bb"}

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std'
]
runtime-benchmarks = ["frame-benchmarking"]
